# RILC_training

./: .gitignore  ALGORITHMS.md  LICENSE  README.md  __init__.py  continue_train_ppo.py  optimize_gains.py  pyproject.toml  statistic_eval.py  test_cilc.py  test_ddilc.py  test_noilc.py  test_rilc.py  test_rilc_q.py  test_rilc_sea.py  train_ppo.py
.dockercontainer/: Dockerfile  build.bash  run.bash
.dockercontainer/config/: requirements.txt
_setup_/: change_mujoco_rendering.py  gen_urdf.py
classes/: README.md  __init__.py
classes/callbacks/: custom_callback.py
classes/controllers/: __init__.py  bfilc.py  cilc.py  ddilc.py  ilc.py  noilc.py  pd.py
classes/environments/: README.md  __init__.py  env_rlilc_elastic.py  env_rlilc_mjc.py  env_rlilc_mjc_old.py  envs_register.py
classes/references/: ABC_reference.py  __init__.py  classic_ref.py  plot_lissajous.py  ref_liss_generator.py  ref_liss_genrator.py  traj.pt  traj_blend.pt  traj_circle.pt  traj_smooth.pt  traj_test.pt
classes/robots/: ABC_robot_.py  ABC_robot_man.py  __init__.py  builder_manipulator.py  builder_robot.py  manipulator_RR.py  softleg.py
config/: softleg_env_mjc.yaml
log/: .gitignore
log/rilc_16/: events.out.tfevents.1759495447.Chaos.65010.0
model/: .gitignore
old/: test_rilc_old.py
scripts/: benchmark_generalization.py  benchmark_mismatch.py  benchmark_single_ep_disturbance.py  benchmark_single_ep_disturbance_custom_noise.py  benchmark_switch_traj.py  benchmark_utils.py  compare_controllers.py  statistic_eval.py
utils/: __init__.py  optimize_gains.py  parse_yaml.py  training_fun.py
(+67 files in other folders)
