[project]
name = "rilc-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "absl-py==2.1.0",
    "gymnasium>=1.2.0",
    "imageio>=2.37.0",
    "matplotlib>=3.10.6",
    "meshcat-shapes>=1.0.0",
    "mujoco>=3.3.5",
    "pin>=3.7.0",
    "pyqt6>=6.9.1",
    "pyyaml>=6.0.2",
    "stable-baselines3[extra]>=2.7.0",
    "tensordict>=0.10.0",
    "torch>=2.8.0",
]

[tool.setuptools.packages.find]
include = ["classes*", "config*", "utils*"]
